--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGODB_URL=
+MONGODB_URL=mongodb+srv://kailiefield:COMP3133@cluster0.fru65.mongodb.net/comp3133_lab05?retryWrites=true&w=majority&appName=Cluster0
